Passwords: added index, show, new, form views with controller actions

--- a/app/views/passwords/index.html.erb
+++ b/app/views/passwords/index.html.erb
@@ -1,1 +1,7 @@
-yeah
+<%= link_to "New password", new_password_path %>
+
+Passwords:
+
+<%= @passwords. each do |password| %>
+  <%= password %>
+<% end %>
