--- a/app/views/passwords/show.html.erb
+++ b/app/views/passwords/show.html.erb
@@ -1,6 +1,11 @@
-<h1><%= @password.url %></h1>
+<div class="flex justify-between items-center">
+  <h1><%= @password.url %></h1>
 
-<%= link_to "Edit password", edit_password_path %>
+  <div class="flex flex-col">
+    <%= link_to "Edit password", edit_password_path %>
+    <%= link_to "Back", root_path %>
+  </div>
+</div>
 
 <h6>Username / Email</h6>
 <pre class="mt-0"><code><%= @password.username %></code></pre>
