Added copying to clipboard using a JS controller

--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,3 +1,6 @@
-<h1>Edit password</h1>
+<div class="flex justify-between items-center mb-4">
+  <h1 class="mb-0">Edit password</h1>
+  <%= link_to "Back", root_path %>
+</div>
 
 <%= render "form", password: @password %>
