--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -1,3 +1,6 @@
-New password
+<div class="flex justify-between items-center">
+  <h1>New password</h1>
+  <%= link_to "Back", root_path %>
+</div>
 
 <%= render "form", password: @password %>
