--- a/app/views/passwords/show.html.erb
+++ b/app/views/passwords/show.html.erb
@@ -1,5 +1,13 @@
 <div class="flex justify-between items-center">
-  <h1><%= @password.url %></h1>
+  <h1>
+    <%= @password.url %>
+    <%= link_to @password.url, target: :_blank do %>  
+      <%# svg default has class "block", to have it inline add "inline block" %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline-block hover:text-sky-500 transition ease-in-out duration-200">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
+     </svg>
+    <% end %>
+  </h1>
 
   <div class="flex flex-col">
     <%= link_to "Edit password", edit_password_path %>
@@ -7,7 +15,17 @@
   </div>
 </div>
 
-<h6>Username / Email</h6>
-<pre class="mt-0"><code><%= @password.username %></code></pre>
+<h6>Username / Email</h6 >
+<div class="flex gap-1 items-center">
+  <pre class="my-0 flex-grow"><code><%= @password.username %></code></pre>
+  <%= button_tag "Copy", data: { controller: "clipboard", action: "click->clipboard#copy", clipboard_content_value: @password.username}, class:"px-5 py-2.5 bg-gray-200 rounded" %>
+</div>
+
+
 <h6>Password</h6>
-<pre class="mt-0"><code><%= @password.password %></code></pre>
+
+
+<div class="flex gap-1 items-center">
+  <pre class="my-0 flex-grow"><code><%= @password.password %></code></pre>
+  <%= button_tag "Copy", data: { controller: "clipboard", action: "click->clipboard#copy", clipboard_content_value: @password.password}, class:"px-5 py-2.5 bg-gray-200 rounded" %>
+</div>
