--- a/app/views/shares/new.html.erb
+++ b/app/views/shares/new.html.erb
@@ -1,12 +1,6 @@
-<h1>Share Password</h1>
+<div class="flex justify-between items-center mb-4">
+  <h1 class="mb-0">Share password</h1>
+  <%= link_to "Back", root_path %>
+</div>
 
-<%= form_with model: @user_password, url: password_shares_path(@password) do |form| %>
-  <div>
-    <%= form.label :user_id %>
-    <%= form.collection_select :user_id, @users, :id, :email %>
-  </div>
-
-  <div>
-    <%= form.submit "Share" %>
-  </div>
-<% end %>
+<%= render "form", password: @password, user_password: @user_password %>
