--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="flex justify-between items-center mb-4">
   <h1 class="mb-0">Edit password</h1>
-  <%= link_to "Back", root_path %>
+  <%= link_to "Back", password_path(@password) %>
 </div>
 
 <%= render "form", password: @password %>
