--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
 @layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+  label {
+    @apply block font-medium;
+  }
+
+  input[type="submit"] {
+    @apply bg-blue-500 text-white px-3 py-2 mt-2 rounded;
+  }
+
+  .field {
+    @apply mb-4
+  }
+
+  input {
+    @apply block;
   }
 }
 
-*/
+
